<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="btn_line_login">Log in with LINE</string>
<string name="common_cancel">Cancel</string>
<string name="common_done">Done</string>
<string name="common_next">Next</string>
<string name="open_line">Open LINE</string>
<string name="openchat_create_profile_input_guide">Set your nickname to be used in \"%1$s\".</string>
<string name="openchat_create_profile_input_max_count">Maximum length reached.</string>
<string name="openchat_create_profile_input_placeholder">Enter nickname</string>
<string name="openchat_create_profile_title">My profile</string>
<string name="openchat_create_room_category">Category</string>
<string name="openchat_create_room_category_guide">Your OpenChat will be displayed in the selected category.</string>
<string name="openchat_create_room_description_guide">Enter keywords using #hashtags</string>
<string name="openchat_create_room_description_placeholder">Enter description</string>
<string name="openchat_create_room_name_placeholder">OpenChat name</string>
<string name="openchat_create_room_search">Allow search</string>
<string name="openchat_create_room_search_guide">Others will be able to search for your OpenChat.</string>
<string name="openchat_create_room_title">Create OpenChat</string>
<string name="openchat_not_agree_with_terms">You haven\'t agreed to the OpenChat Terms and Conditions of Use yet.\nGo to OpenChat in the LINE app and agree to the Terms and Conditions of Use to continue.</string>
<string name="search_no_fiend">You don\'t have any friends to choose from.</string>
<string name="search_no_group">You don\'t have any groups to choose from.</string>
<string name="search_no_results">No results.</string>
<string name="select_tab_friends">Friends</string>
<string name="select_tab_groups">Groups</string>
<string name="select_target_search_hint">Search by name</string>
<string name="select_target_title">Share With</string>
<string name="square_create_category_all">All</string>
<string name="square_create_category_alumnus">Alumni</string>
<string name="square_create_category_ani">Animation &amp; comics</string>
<string name="square_create_category_art">Art</string>
<string name="square_create_category_artculture">Arts &amp; books</string>
<string name="square_create_category_baby">Kids</string>
<string name="square_create_category_beauty">Beauty</string>
<string name="square_create_category_book">Books</string>
<string name="square_create_category_car">Automotive</string>
<string name="square_create_category_celebrity">Famous people</string>
<string name="square_create_category_company">Company</string>
<string name="square_create_category_economy">Economy</string>
<string name="square_create_category_entertainer">Fan clubs</string>
<string name="square_create_category_etc">Other</string>
<string name="square_create_category_exercise">Fitness</string>
<string name="square_create_category_family">Family</string>
<string name="square_create_category_fan">Fan clubs</string>
<string name="square_create_category_fashion">Fashion &amp; beauty</string>
<string name="square_create_category_finance">Finance &amp; business</string>
<string name="square_create_category_food">Food</string>
<string name="square_create_category_friend">Friends</string>
<string name="square_create_category_game">Games</string>
<string name="square_create_category_health">Health</string>
<string name="square_create_category_history">History</string>
<string name="square_create_category_hobby">Hobbies</string>
<string name="square_create_category_it">Tech</string>
<string name="square_create_category_jpop">J-pop/J-drama</string>
<string name="square_create_category_kpop">K-pop/K-drama</string>
<string name="square_create_category_medicine">Medical</string>
<string name="square_create_category_movies">Movies</string>
<string name="square_create_category_music">Music</string>
<string name="square_create_category_notselected">Unselected (not shown in any category)</string>
<string name="square_create_category_org">Organizations</string>
<string name="square_create_category_pet">Pets</string>
<string name="square_create_category_photo">Photos</string>
<string name="square_create_category_recipe">Cooking</string>
<string name="square_create_category_region">Local</string>
<string name="square_create_category_school">Schools</string>
<string name="square_create_category_science">Science</string>
<string name="square_create_category_social">Social</string>
<string name="square_create_category_society">Club</string>
<string name="square_create_category_sports">Sports</string>
<string name="square_create_category_study">Study</string>
<string name="square_create_category_travel">Travel</string>
<string name="square_create_category_trending">Trending</string>
<string name="square_create_category_tv">TV shows</string>
</resources>
