<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.linecorp.linesdk.openchat.ui.OpenChatInfoViewModel" />
    </data>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".openchat.ui.OpenChatInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/openchat_background">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:layout_height="121dp"
                android:layout_marginEnd="13dp"
                android:background="@color/background"
                android:drawablePadding="18dp"
                android:gravity="center_vertical"
                android:hint="@string/openchat_create_room_name_placeholder"
                android:imeOptions="actionNext"
                android:includeFontPadding="true"
                android:paddingTop="30dp"
                android:paddingBottom="19dp"
                android:textColor="@color/target_item_text"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp"
                android:maxLength="50"
                android:text="@{viewModel.chatroomName}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/room_name_guide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/openchat_create_room_name_guide"
                android:textColor="@color/text_hint"
                android:textSize="13sp"
                android:maxLines="2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/nameMaxTextView"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

            <TextView
                android:id="@+id/nameMaxTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:textColor="@color/text_hint"
                android:textSize="13sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText"
                tools:text="3/50" />

            <View
                android:id="@+id/name_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/nameMaxTextView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@color/openchat_divider" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="0dp"
                android:layout_height="112dp"
                android:background="@color/background"
                android:drawablePadding="18dp"
                android:gravity="center_vertical"
                android:hint="@string/openchat_create_room_description_placeholder"
                android:includeFontPadding="true"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="@color/target_item_text"
                android:textColorHint="@color/text_hint"
                android:textSize="15sp"
                android:maxLength="200"
                android:text="@{viewModel.description}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_divider" />

            <TextView
                android:id="@+id/descriptionMaxTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionEditText"
                android:layout_marginBottom="9dp"
                android:gravity="center_vertical"
                android:textColor="@color/openchat_text_color"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"
                tools:text="8/200" />

            <TextView
                android:id="@+id/description_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:gravity="center_vertical"
                android:text="@string/openchat_create_room_description_guide"
                android:textColor="@color/openchat_text_color"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/descriptionMaxTextView"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />


            <View
                android:id="@+id/description_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/description_detail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@color/openchat_divider" />

            <TextView
                android:id="@+id/category_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/description_divider"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/openchat_create_room_category"
                android:textColor="@color/target_item_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/categoryLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@+id/category_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{viewModel.getCategoryString()}"
                android:textColor="@color/openchat_category"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/category_guide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@+id/categoryLabelTextView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/openchat_create_room_category_guide"
                android:textColor="@color/openchat_text_color"
                android:textSize="12sp" />

            <View
                android:id="@+id/category_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/category_guide"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@color/openchat_divider" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/searchIncludedContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/category_divider"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:minHeight="67dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/search_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/openchat_create_room_search"
                    android:textColor="@color/target_item_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/search_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/search_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="14dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/openchat_create_room_search_guide"
                    android:textColor="@color/openchat_text_color"
                    android:textSize="12sp" />
                <CheckBox
                    android:id="@+id/searchIncludedCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="10dp"
                    android:button="@drawable/list_checkbox_img"
                    android:text=""
                    android:clickable="true"
                    android:checked="@{viewModel.isSearchIncluded.booleanValue()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</FrameLayout>
</layout>
